5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1758_674.log
== TEST (2019-05-23 10:22:43) 
-- CODE:
from numpy import*

x = array(eval(input("parapapa:")))

print(size(x))
print(max(x))
print(min(x))
print(sum(x))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:22:52) 
-- CODE:
from numpy import*

x = array(eval(input("parapapa:")))

print(size(x))
print(max(x))
print(min(x))
print(sum(x))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:23:25) 
-- CODE:
from numpy import*

x = array(eval(input("parapapa:")))

print(size(x))
print(max(x))
print(min(x))
print(sum(x))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:26:26) 
-- CODE:
from numpy import*

x = array(eval(input("parapapa:")))

print(size(x))
print(x[0])
print(x[-1])
print(max(x))
print(min(x))
print(sum(x))
print(sum(x)/size(x))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:26:42) 
-- CODE:
from numpy import*

x = array(eval(input("parapapa:")))

print(size(x))
print(x[0])
print(x[-1])
print(max(x))
print(min(x))
print(sum(x))
print(sum(x)/size(x))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:26:43) 
-- CODE:
from numpy import*

x = array(eval(input("parapapa:")))

print(size(x))
print(x[0])
print(x[-1])
print(max(x))
print(min(x))
print(sum(x))
print(sum(x)/size(x))

-- EXECUTION TIME:
0.49251
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.647727272727273
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:27:07) 
-- CODE:
from numpy import*

x = array(eval(input("parapapa:")))

print(size(x))
print(x[0])
print(x[-1])
print(max(x))
print(min(x))
print(sum(x))
print(sum(x)/size(x))

-- EXECUTION TIME:
0.393806
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.647727272727273
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:27:08) 
-- CODE:
from numpy import*

x = array(eval(input("parapapa:")))

print(size(x))
print(x[0])
print(x[-1])
print(max(x))
print(min(x))
print(sum(x))
print(sum(x)/size(x))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:27:55) 
-- CODE:
from numpy import*

x = array(eval(input("parapapa:")))

print(size(x))
print(x[0])
print(x[-1])
print(max(x))
print(min(x))
print(sum(x))
print(sum(x)/size(x))

-- EXECUTION TIME:
0.430605
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.647727272727273
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:28:35) 
-- CODE:
from numpy import*

x = array(eval(input("parapapa:")))

print(size(x))
print(x[0])
print(x[-1])
print(max(x))
print(min(x))
print(sum(x))
print(round(sum(x)/size(x),2)

-- EXECUTION TIME:
0.185243
-- ERROR:
  File "/home/codebench/codes/1758/674/main.py", line 12
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:29:06) 
-- CODE:
from numpy import*

x = array(eval(input("parapapa:")))

print(size(x))
print(x[0])
print(x[-1])
print(max(x))
print(min(x))
print(sum(x))
p = (sum(x)/size(x))
print(round(p,2))
-- EXECUTION TIME:
0.59699
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
